WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311333
WTF::Unexpected should be aliased to std::unexpected
https://bugs.webkit.org/show_bug.cgi?id=311333
Summary
WTF::Unexpected should be aliased to std::unexpected
Abrar Rahman Protyasha
Reported
2026-04-02 02:51:36 PDT
Following up from
webkit.org/b/311015
. This is now possible since WTF::Unexpected has a congruent interface as its standard analogue.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-02 02:51:43 PDT
<
rdar://problem/173923454
>
Abrar Rahman Protyasha
Comment 2
2026-04-02 02:55:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61900
EWS
Comment 3
2026-04-04 19:00:10 PDT
Committed
310588@main
(67dae37d8436): <
https://commits.webkit.org/310588@main
> Reviewed commits have been landed. Closing PR #61900 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug