WTF::Unexpected should be aliased to std::unexpected https://bugs.webkit.org/show_bug.cgi?id=311333 rdar://173923454

Reviewed by Richard Robinson.

This patch follows up from webkit.org/b/311015. It is now possible to
establish this alias since WTF::Unexpected has a interface congruent
with its standard analogue's.

This patch is part of a series of changes that lead up to std::expected-
and-friends adoption within WebKit.

No new tests because there is no change in behavior.

* Source/WTF/wtf/Forward.h:
* Source/WTF/wtf/Unexpected.h:
(std::experimental::fundamentals_v3::unexpected::unexpected): Deleted.
(std::experimental::fundamentals_v3::unexpected::error const): Deleted.
(std::experimental::fundamentals_v3::unexpected::error): Deleted.
(std::experimental::fundamentals_v3::operator==): Deleted.
* Source/cmake/WebKitCompilerFlags.cmake:
  Drive-by workaround for GTK/WPE configurations still
  building against Clang 18.

Canonical link: https://commits.webkit.org/310588@main