Source/WTF/wtf/Forward.h
@@ -236,7 +236,6 @@ namespace std {
 namespace experimental {
 inline namespace fundamentals_v3 {
 template<class, class> class expected;
-template<class> class unexpected;
 }}} // namespace std::experimental::fundamentals_v3
 
 using WTF::SaSegmentedVector;
@@ -325,7 +324,6 @@ using WTF::WorkQueue;
 using WTF::makeUniqueRef;
 
 template<class T, class E> using Expected = std::experimental::expected<T, E>;
-template<class E> using Unexpected = std::experimental::unexpected<E>;
 
 // Sometimes an inline method simply forwards to another one and does nothing else. If it were
 // just a forward declaration of that method then you would only need a forward declaration of
